Also regenerate doc when workflow is modified

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -21,7 +21,7 @@ jobs:
       - name: "Check for changes in documentation"
         id: check_doc_changes
         run: |
-          if test -z "$(git diff --name-only HEAD~1..HEAD -- doc/)";
+          if test -z "$(git diff --name-only HEAD~1..HEAD -- doc/ .github/workflows/docs.yml)";
           then
             echo "No changes in doc/"
             echo "diff=false" >> $GITHUB_OUTPUT
