--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,7 +19,7 @@ jobs:
   # ubuntu with gcc
   ##############################################################################
   ubuntu-gcc:
-    name: Ubuntu GCC, default flags with AVX2, Code Coverage (x10)
+    name: Ubuntu GCC, default flags with AVX2, Code Coverage (x3)
 
     runs-on: ubuntu-latest
 
@@ -27,6 +27,7 @@ jobs:
       MAKE: "make -j --output-sync=target"
       CC: "gcc"
       TESTCFLAGS: "-Wall -O1"
+      FLINT_TEST_MULTIPLIER: "3" # increase to 10 after workshop ~ 30min
 
     steps:
       - uses: actions/checkout@v4
@@ -55,12 +56,10 @@ jobs:
 
       - name: "Compile tests"
         run: |
-          export FLINT_TEST_MULTIPLIER=10
           $MAKE tests
 
       - name: "Check"
         run: |
-          export FLINT_TEST_MULTIPLIER=10
           $MAKE check
 
       - name: "Gather coverage data"
@@ -79,7 +78,7 @@ jobs:
   # ubuntu with gcc (assert)
   ##############################################################################
   ubuntu-gcc-assert:
-    name: Ubuntu GCC (assert, x2)
+    name: Ubuntu GCC (assert, x1)
 
     runs-on: ubuntu-latest
 
@@ -87,6 +86,7 @@ jobs:
       MAKE: "make -j --output-sync=target"
       CC: "gcc"
       CFLAGS: "-Wall -Werror=implicit-function-declaration"
+      FLINT_TEST_MULTIPLIER: "1" # increase to 2 after workshop ~ 15min
 
     steps:
       - uses: actions/checkout@v4
@@ -114,12 +114,10 @@ jobs:
 
       - name: "Compile tests"
         run: |
-          export FLINT_TEST_MULTIPLIER=2
           $MAKE tests
 
       - name: "Check"
         run: |
-          export FLINT_TEST_MULTIPLIER=2
           $MAKE check
 
       - if: failure()
@@ -132,7 +130,7 @@ jobs:
   # macos with gcc and blas
   ##############################################################################
   macos-gcc:
-    name: macOS GCC with BLAS (x3)
+    name: macOS GCC with BLAS (x1)
 
     runs-on: macos-latest
 
@@ -141,6 +139,7 @@ jobs:
       CFLAGS: "-Wall"
       EXTRA_OPTIONS: "--disable-static --enable-shared"
       CC: "gcc"
+      FLINT_TEST_MULTIPLIER: "1" # increase to 3 after workshop ~ 10min
 
     steps:
       - uses: actions/checkout@v4
@@ -174,12 +173,10 @@ jobs:
 
       - name: "Compile tests"
         run: |
-          export FLINT_TEST_MULTIPLIER=3
           $MAKE tests
 
       - name: "Check"
         run: |
-          export FLINT_TEST_MULTIPLIER=3
           $MAKE check
 
       - if: failure()
@@ -195,6 +192,8 @@ jobs:
     name: FreeBSD Clang (x0.5)
 
     runs-on: macos-latest
+    env:
+      FLINT_TEST_MULTIPLIER: "0.5"
 
     steps:
       - uses: actions/checkout@v4
@@ -220,7 +219,6 @@ jobs:
             autoconf --version
             libtool --version
             touch _is_installed
-            export FLINT_TEST_MULTIPLIER=0.5
             ./bootstrap.sh
             touch _is_bootstrapped
             ./configure CC=clang CFLAGS="-Wall" --disable-static --enable-shared  \
@@ -294,6 +292,7 @@ jobs:
       CFLAGS: "-Wall"
       EXTRA_OPTIONS: "--enable-shared --disable-static"
       CC: "gcc"
+      FLINT_TEST_MULTIPLIER: "0.5"
 
     steps:
       - uses: actions/checkout@v4
@@ -326,13 +325,11 @@ jobs:
       - name: "Compile tests"
         run: |
           cd ${REPO}
-          export FLINT_TEST_MULTIPLIER=0.5
           $MAKE tests
 
       - name: "Check"
         run: |
           cd ${REPO}
-          export FLINT_TEST_MULTIPLIER=0.5
           $MAKE check
 
       - if: failure()
@@ -345,7 +342,7 @@ jobs:
   # ubuntu with clang
   #############################################################################
   ubuntu-clang:
-    name: Ubuntu Clang (x5)
+    name: Ubuntu Clang (x1)
 
     runs-on: ubuntu-latest
 
@@ -356,6 +353,7 @@ jobs:
       CFLAGS: "-Wall"
       CC: "clang"
       EXTRA_OPTIONS: "--disable-static --enable-shared"
+      FLINT_TEST_MULTIPLIER: "1" # increase to 5 after workshop
 
     steps:
       - uses: actions/checkout@v4
@@ -383,12 +381,10 @@ jobs:
 
       - name: "Compile tests"
         run: |
-          export FLINT_TEST_MULTIPLIER=5
           $MAKE tests
 
       - name: "Check"
         run: |
-          export FLINT_TEST_MULTIPLIER=5
           $MAKE check
 
       - if: failure()
@@ -459,6 +455,7 @@ jobs:
       CFLAGS: "-Wall"
       EXTRA_OPTIONS: "--enable-shared --disable-static"
       CC: "gcc"
+      FLINT_TEST_MULTIPLIER: "0.5"
 
     steps:
       - uses: actions/checkout@v4
@@ -488,12 +485,10 @@ jobs:
 
       - name: "Compile tests"
         run: |
-          export FLINT_TEST_MULTIPLIER=0.5
           ${MAKE} tests
 
       - name: "Check"
         run: |
-          export FLINT_TEST_MULTIPLIER=0.5
           ${MAKE} check
 
       - if: failure()
