--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,6 +27,8 @@ jobs:
         with:
           packages: >-
             latexmk
+            pdftex
+            pdflatex
 
       - name: "Setup"
         run: |
