Use GMP internal for flint_mpn_divisible_1_p

--- a/configure.ac
+++ b/configure.ac
@@ -663,6 +663,10 @@ internals.])])
     [dummy_var="x"],
     [AC_MSG_ERROR([`mpn_div_q' was not found in the GMP library. It is needed to enable GMP
 internals.])])
+    AC_CHECK_LIB([gmp],[__gmpn_modexact_1_odd],
+    [dummy_var="x"],
+    [AC_MSG_ERROR([`mpn_modexact_1_odd' was not found in the GMP library. It is needed to
+enable GMP internals.])])
 fi
 
 AC_CHECK_LIB(mpfr,mpfr_init,
