--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,11 @@
 */.deps/*
 src/fmpz/fmpz.c
 src/config.h
+src/config.h.in
 src/fft_tuning.h
 src/flint-config.h
 build/
+config/
 config.log
 /Makefile
 doc/build
@@ -47,12 +49,7 @@ flint2
 .DS_Store
 python/__pycache__/*.pyc
 aclocal.m4
-config.guess
 config.status
-config.sub
 configure
-install-sh
 libtool
-ltmain.sh
-src/config.h.in
 flint.pc
