--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -40,7 +40,7 @@ jobs:
           args:
           working_directory: doc
           extra_system_packages: "python3-sphinx make"
-          entrypoint: ./entrypoint.sh
+          entrypoint: doc/entrypoint.sh
 
       - name: "Create a tarball of the documentation"
         run: |
