--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: "Setup"
         run: |
-          sudo apt install -y python3-sphinx
+          sudo apt-get install -y python3-sphinx
           sphinx-build --version
 
       - name: "Build documentation"
