--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -44,7 +44,7 @@ jobs:
         run: |
           cd doc/build
           mv html doc
-          mv latex/Flint.pdf doc
+          cp latex/Flint.pdf doc
           tar -czvf doc.tar.gz doc
 
       - name: "Setup SSH key"
