--- a/src/flint.h.in
+++ b/src/flint.h.in
@@ -93,7 +93,7 @@ extern "C" {
 
 #define __FLINT_VERSION @FLINT_MAJOR@
 #define __FLINT_VERSION_MINOR @FLINT_MINOR@
-#define __FLINT_VERSION_MINOR @FLINT_MINOR@
+#define __FLINT_VERSION_PATCHLEVEL @FLINT_PATCH@
 #define FLINT_VERSION "@FLINT_VERSION@"
 #define __FLINT_RELEASE_NUM(a,b,c) ((a)*10000 + (b)*100 + (c))
 #define __FLINT_RELEASE __FLINT_RELEASE_NUM(__FLINT_VERSION, __FLINT_VERSION_MINOR, __FLINT_VERSION_PATCHLEVEL)
