Fix substitution of version number for older autotools

--- a/Makefile.in
+++ b/Makefile.in
@@ -16,7 +16,7 @@ ABS_FLINT_DIR:='$(patsubst %/,%, $(dir $(abspath $(lastword $(MAKEFILE_LIST)))))
 ABS_SRC_DIR:=$(ABS_FLINT_DIR)/$(SRC_DIR)
 ABS_BUILD_DIR:=$(ABS_FLINT_DIR)/$(SRC_DIR)
 
-FLINT_VERSION:=@FLINT_VERSION@
+FLINT_VERSION:=@FLINT_VERSION_FULL@
 FLINT_MAJOR_SO:=@FLINT_MAJOR_SO@
 FLINT_MINOR_SO:=@FLINT_MINOR_SO@
 FLINT_PATCH_SO:=@FLINT_PATCH_SO@
